@@ -1,0 +1,7 @@
+qmtp.a
+echo-backend.o
+sasl-auth.o
+-lcvm-sasl
+-lcvm-client
+-lbg
+socket.lib
